<resources>
    <string name="app_name">KingdomCollector</string>
    <string name="large_text">
        "Hyperion Mobile App Terms and Conditions of Use"

        "Welcome to the Hyperion mobile application (hereinafter, the &quot;Application&quot;).
        These terms and conditions (hereinafter, the &quot;Terms&quot;)
        establish the conditions of use of the Application. By using the Application,
        you agree to these Terms in their entirety. If you do not agree to these Terms,
        please do not use the Application.

        Application Object The Application is a service of [description of the service offered by
        the application].
        The Hyperion company owns the Application and reserves all rights to the Application.
        Terms of use By using the Application, you agree to the following conditions:

        A. You are responsible for your use of the Application.
        You may not use the Application for illegal or unauthorized purposes.

        B. You may not use the Application in any way that could damage, disable, overburden,
        or impair the Application or interfere with its use by other users.

        C. You may not use the Application to send junk mail, spam or any other type of unsolicited
        communication. d. You may not copy, modify, or distribute content from the Application
        without the express permission of Hyperion.

        Intellectual property The Application and all its content, including but not limited to text,
        graphics, images, videos, logos and software, are protected by intellectual property laws.

        The Hyperion company owns all intellectual property rights in the Application.
        Privacy Hyperion respects your privacy and complies with all applicable data protection laws.
        The personal information that you provide to the Application will be used only for the
        purposes provided in the Privacy Policy of the Application.

        By using the Application, you agree to our Privacy Policy.
        Limitation of Liability Hyperion shall not be liable for any direct, indirect, incidental,
        special, or consequential damages, including, but not limited to, damages for lost profits,
        business interruption, loss of information, or other pecuniary damages, resulting from the
        use or inability to use of the Application.

        Changes to the Terms Hyperion reserves the right to modify these Terms at any time.
        If we change these Terms, we will notify you through the Application or by email.
        If you do not agree to the modified Terms, you must stop using the Application.
        Governing Law and Jurisdiction These Terms shall be governed by and construed in accordance
        with the laws of [country where the Hyperion company is registered].
        Any dispute arising in connection with these Terms shall be subject to the exclusive
        jurisdiction of the courts of [city where Hyperion company is registered].
        By using the Application, you agree to submit to the exclusive jurisdiction of the courts of
        [city where Hyperion company is registered] for any disputes arising in connection with
        these Terms.

        Termination Hyperion reserves the right to terminate your access to the Application at
        any time and without notice if you breach these Terms.

        General disposition If any provision of these Terms is held invalid or unenforceable,
        that provision will be construed in accordance with applicable law to reflect,
        to the extent possible, the original intent of the parties and the other provisions will
        remain valid and enforceable. Hyperion's waiver of any provision of these Terms shall not be
        deemed a further or continuing waiver of that provision or any other provision.
        These Terms constitute the entire agreement between you and Hyperion in relation to
        the Application and supersede all prior or contemporaneous agreements between you and
        Hyperion in relation to the Application.

        If you have any questions or concerns about these Terms, please contact us via
        [email or Application contact form]. Effective Date: [effective date of the Terms].

        Thank you for using the Hyperion Application."
 "
    </string>

    <string name="action_settings">Settings</string>
    <string name="aboutPage">About us</string>
    <string name="authors">Authors</string>
    <string name="version">Version</string>
    <string name="versionReal">1.0.0</string>
    <string name="Terms_Cond">Terms and Cond</string>
    <string name="btn_settings"><![CDATA[Term&Cond]]></string>
    <string name="tablero_activity_title">activity_tablero</string>
    <string name="bnt_start">START</string>
    <string name="background" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_00">0_0</string>
    <string name="btn_01">0_1</string>
    <string name="btn_02">0_2</string>
    <string name="btn_10">1_0</string>
    <string name="btn_11">1_1</string>
    <string name="btn_12">1_2</string>
    <string name="btn_20">2_0</string>
    <string name="btn_21">2_1</string>
    <string name="btn_22">2_2</string>
    <string name="btn_c1">c1</string>
    <string name="btn_c2">c2</string>
    <string name="btn_c3">c3</string>
    <string name="btn_c4">c4</string>
    <string name="btn_c5">c5</string>

    <string name="txt_score">Score:</string>
    <string name="txt_player_name">Player name</string>
    <string name="txt_cards">Cards:</string>
    <string name="login_title">Login</string>
    <!-- About us-->
    <string name="str_joan_bonell_ruiz" translatable="false">Joan Bonell Ruiz</string>
    <string name="str_Carlos_Martinez_Gonzalez" translatable="false">Carlos Martínez González</string>
    <string name="str_ricard_bosch_perianes" translatable="false">Ricard Bosch Perianes</string>
    <string name="str_claudia_rodriguez_martinez" translatable="false">Claudia Rodriguez Martinez</string>
    <string name="authors">Authors</string>
    <string name="version">Version</string>
    <string name="versionReal">7.0.0</string>
    <string name="hopeyouenjoyaboutus">We hope you enjoy playing as much as we enjoyed creating this game for you.</string>
    <string name="Thankyouforplay">Thank you for playing our game!</string>
    <string name="welcometoourgame">Welcome to our game! We are a team of developers passionate about creating fun and exciting experiences for our players.</string>
    <string name="logo_about_us">logo about us</string>


    <!-- activity_login__register__recover-->
    <string name="email_hint">Mail</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="recoverpasswordButton">Recover your password</string>
    <string name="putYourMailToRecover">Put your mail here to recover your password:</string>
    <string name="emailEmpty">Mail is required.</string>
    <string name="passwordRequired">Password is required.</string>
    <string name="verifyEmail">Verify your mail to log in.</string>
    <string name="authFailed">Authentication failed.</string>

    <string name="btn_collection" translatable="false">Collection</string>
    <string name="card_type" translatable="false">Card Type</string>
    <string name="world_record_title">World Record</string>
    <string name="personal_record_title">Record personal</string>

    <!-- activity_cardcollection -->
    <string name="selected_cards_label" translatable="false">Selected Cards:</string>
    <string name="confirm_selection" translatable="false">Confirm Team</string>
    <string name="card_name" translatable="false">Card Name</string>
    <string name="card_description">Card Description</string>

    <!-- Ni flowers -->
    <string name="hopeyouenjoyaboutus">We hope you enjoy playing as much as we enjoyed creating this game for you.</string>
    <string name="Thankyouforplay">Thank you for playing our game!</string>
    <string name="welcometoourgame">Welcome to our game! We are a team of developers passionate about creating fun and exciting experiences for our players.</string>
    <string name="update">Update</string>
    <string name="email_sended_confirm">An email verification has been sent to your email account. Please confirm your email before logging in.</string>
    <string name="Terms_Cond">Terms and Cond</string>


    <!-- activity_main -->
    <string name="btn_collection" translatable="false">Collection</string>
    <string name="bnt_start">Start button</string>
    <string name="victorias_usuario" translatable="false">Victories</string>
    <string name="world_record_title">World record</string>
    <string name="actualizar">actualizar</string>
    <string name="background_menu_principal">Background main menu</string>


    <!-- card item -->
    <string name="card_name" translatable="false">Card Name</string>
    <string name="card_type" translatable="false">Card Type</string>

    <!-- fragment_winner-->
    <string name="return_home" translatable="false">Return home</string>
    <string name="play_again" translatable="false">Return home</string>

    <string name="email_sended_confirm">An email verification has been sent to your email account. Please confirm your email before logging in.</string>

    <string name="card_type_president">President</string>
    <string name="card_type_forward">Forward</string>
    <string name="card_type_midfielder">Midfielder</string>
    <string name="card_type_defender">Defender</string>

    <string name="error_message">An error occurred while fetching the cards.</string>
    <string name="winner_is">The winner is </string>
    <string name="tie">It\'s a tie </string>
    <string name="not_your_turn">It\'s not your turn.</string>
    <string name="unauthenticated_user_error">Error: User not authenticated</string>
    <string name="welcome">Welcome %1$s, your last login was: %2$s</string>
    <string name="welcome_without_registration">Welcome %1$s, no previous login records found.</string>

    <string name="recover_password_empty_email">Please enter your email</string>
    <string name="recover_password_email_sent">Password reset email has been sent</string>
    <string name="recover_password_email_failed">There was an error sending the password reset email</string>

    <string name="error_empty_email">Email is required</string>
    <string name="error_empty_password">Password is required</string>
    <string name="error_empty_username">Username is required</string>
    <string name="email_verification_sent">Email verification sent. Please check your email.</string>
    <string name="error_register_failed">Failed to create account. Please try again later.</string>


    <!-- Play mode-->
    <string name="btn_play_online" translatable="false">Play online</string>
    <string name="btn_play_local" translatable="false">play local</string>
    <string name="btn_select_your_cards" translatable="false">select your cards</string>

    <!-- Game controller-->
    <string name="not_turn">Its not your turn</string>
    <string name="draw">Draw</string>
    <string name="the_winner_is">The winner is</string>
    <string name="title_kingdom_collector">Title kingdom collector</string>


</resources>