<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="BoardViewModel"
            type="cat.udl.hyperion.appmobils.kingdomcollector.viewmodels.BoardViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.BoardFragment">

        <TableLayout
            android:id="@+id/boardLayout"
            android:layout_width="415dp"
            android:layout_height="410dp"
            app:layout_constraintBottom_toBottomOf="@+id/ImageView_campo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ImageView_campo">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_00"
                    android:layout_width="89dp"
                    android:layout_height="116dp"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/btn_00" />

                <Button
                    android:id="@+id/button_01"
                    android:layout_width="89dp"
                    android:layout_height="116dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/btn_01" />

                <Button
                    android:id="@+id/button_02"
                    android:layout_width="89dp"
                    android:layout_height="116dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/btn_02" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_10"
                    android:layout_width="89dp"
                    android:layout_height="116dp"
                    android:layout_marginStart="72dp"
                    android:text="@string/btn_10" />

                <Button
                    android:id="@+id/button_11"
                    android:layout_width="89dp"
                    android:layout_height="116dp"

                    android:text="@string/btn_11" />

                <Button
                    android:id="@+id/button_12"
                    android:layout_width="89dp"
                    android:layout_height="116dp"
                    android:text="@string/btn_12" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_20"
                    android:layout_width="89dp"
                    android:layout_height="116dp"
                    android:layout_marginStart="72dp"
                    android:text="@string/btn_20" />

                <Button
                    android:id="@+id/button_21"
                    android:layout_width="89dp"
                    android:layout_height="116dp"
                    android:text="@string/btn_21" />
                <!--Veure una imatge en el botó-->
                <!--android:foreground="@drawable/tablero"-->

                <Button
                    android:id="@+id/button_22"
                    android:layout_width="89dp"
                    android:layout_height="116dp"
                    android:text="@string/btn_22" />
            </TableRow>

        </TableLayout>

    </FrameLayout>
</layout>

