<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="DeckViewModel"
            type="cat.udl.hyperion.appmobils.kingdomcollector.viewmodels.DeckViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.DeckView">

        <cat.udl.hyperion.appmobils.kingdomcollector.views.DeckView
            android:id="@+id/deck_view_container"
            android:layout_width="402dp"
            android:layout_height="120dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/ImageView_campo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_c1"
                android:layout_width="76dp"
                android:layout_height="111dp"
                android:layout_marginStart="12dp"
                android:foreground="@drawable/reverse_card"
                android:text="@string/btn_c1" />

            <Button
                android:id="@+id/button_c2"
                android:layout_width="76dp"
                android:layout_height="111dp"
                android:foreground="@drawable/reverse_card"
                android:text="@string/btn_c2" />

            <Button
                android:id="@+id/button_c3"
                android:layout_width="76dp"
                android:layout_height="111dp"
                android:foreground="@drawable/reverse_card"
                android:text="@string/btn_c3" />

            <Button
                android:id="@+id/button_c4"
                android:layout_width="76dp"
                android:layout_height="111dp"
                android:foreground="@drawable/reverse_card"
                android:text="@string/btn_c4" />

            <Button
                android:id="@+id/button_c5"
                android:layout_width="76dp"
                android:layout_height="111dp"
                android:foreground="@drawable/reverse_card"
                android:text="@string/btn_c5" />
        </cat.udl.hyperion.appmobils.kingdomcollector.views.DeckView>

    </FrameLayout>
</layout>
