<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_foreground"
    tools:context=".other.auth.LoginActivity">

    <EditText
        android:id="@+id/email_input"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="298dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:foreground="@drawable/login_button"
        android:text="@string/login_button"
        android:textColor="@color/design_default_color_surface"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/register_button1"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/register_button1"
        android:layout_width="145dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:foreground="@drawable/register_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/forgot_password_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>